--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^7.1.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.2.1"
