--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0-rc.1",
@@ -17,6 +18,7 @@
     "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^7.1.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
