--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.5",
+    "@mui/styled-engine-sc": "^6.4.3",
+    "@mui/x-charts": "^7.27.0",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
     "@tanstack/react-query": "^5.64.1",
@@ -23,6 +28,7 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
     "sort-by": "^1.2.0",
+    "styled-components": "^6.1.15",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1"
   },
